--- a/167.Two Sum II - Input array is sorted.html
+++ b/167.Two Sum II - Input array is sorted.html
@@ -8,7 +8,7 @@
 <script>
     const twoSum = function (numbers, target) {
         /**
-         * 二分法
+         * 查找表
          * @param numbers
          * @param target
          * @returns {[null,null]}
@@ -39,7 +39,7 @@
             }
         }
     };
-    console.log(twoSum([2, 4, 7, 12, 5, 8], 9))
+    console.log(twoSum([4, 2, 5, 7, 1,12], 9))
 </script>
 </body>
 </html>
