--- a/349.Intersection of Two Arrays.html
+++ b/349.Intersection of Two Arrays.html
@@ -12,6 +12,7 @@
      * @return {number[]}
      */
     const intersection = (nums1, nums2) => {
+        // 求合集 I
         let record = new Set(nums1),
             res = [];
         for (let i = 0; i < nums2.length; i++) {
