--- a/350.Intersection of Two Arrays II.html
+++ b/350.Intersection of Two Arrays II.html
@@ -12,6 +12,7 @@
      * @return {number[]}
      */
     const intersect = (nums1, nums2) => {
+        // 求合集 II
         let map = {},
             res = []
         for (let i = 0; i < nums1.length; i++) {
