--- a/1.Two Sum.html
+++ b/1.Two Sum.html
@@ -7,6 +7,7 @@
 <body>
 <script>
     const twoSum = function (nums, target) {
+        // 从无序数组中找到两个值，使两个值之和等于target
         /**
          * 查找表
          * @type {Map}
