--- a/167.Two Sum II - Input array is sorted.html
+++ b/167.Two Sum II - Input array is sorted.html
@@ -7,6 +7,7 @@
 <body>
 <script>
     const twoSum = function (numbers, target) {
+        // 从有序数组中找到两个值，使两个值之和等于target
         /**
          * 查找表
          * @param numbers
@@ -39,7 +40,8 @@
             }
         }
     };
-    console.log(twoSum([4, 2, 5, 7, 1,12], 9))
+    console.log(twoSum([1, 2, 4, 5, 7, 12], 9))
+
 </script>
 </body>
 </html>
