--- a/3. Longest Substring Without Repeating Characters.html
+++ b/3. Longest Substring Without Repeating Characters.html
@@ -7,6 +7,7 @@
 <body>
 <script>
     const lengthOfLongestSubstring = function (s) {
+        // 求最长不出现重复字母的字符串
         let freq = {},
             l = 0,
             r = -1,
